<resources>
    <string name="app_name">ShoppingListApp</string>
    <string name="home_bar_title">Shopping lists</string>
    <string name="add_shopping_list_button">Add shopping list</string>
    <string name="shopping_lists">Shopping Lists</string>
    <string name="archived_shopping_lists">Archived Shopping Lists</string>
    <string name="shopping_list_icon">Shopping list icon</string>
    <string name="grocery_icon">Grocery icon</string>
    <string name="grocery_done_status_icon">Grocery done status icon</string>
    <string name="shopping_list_item_second_text_prefix">Groceries done</string>
    <string name="add_grocery_button">Add grocery button</string>
    <string name="go_back_to_home_activity">Go back to home activity</string>
    <string name="grocery_bar_title">Shopping list details</string>
    <string name="shopping_list_dialog_title">Add new shopping list</string>
    <string name="grocery_dialog_title">Add new grocery to the list</string>
    <string name="shopping_list_name">Shopping list name</string>
    <string name="grocery_name">Grocery name</string>
    <string name="grocery_amount">Amount</string>
    <string name="shopping_list_added">Shopping list has been added!</string>
    <string name="grocery_added">Grocery has been added!</string>
    <string name="name_error_message">Field should contain at least 1 letter and cannot: contain special characters, be empty</string>
    <string name="amount_error_message">Field cannot: contain special characters, be empty, be equal to 0</string>
    <string name="add">Add</string>
    <string name="grocery_dialog_tag">insert new grocery dialog</string>
    <string name="shopping_list_dialog_tag">insert new shopping list dialog</string>
    <string name="shopping_list_id_key">SHOPPING_LIST_ID</string>
    <string name="is_shopping_list_archived_key">IS_SHOPPING_LIST_ARCHIVED</string>
    <string name="x_sign">X</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in">Sign in</string>
    <string name="register_prefix_text">You do not have an account yet?</string>
    <string name="register">Register</string>
    <string name="google">google</string>
    <string name="registration">Create account</string>
    <string name="sign_up">Sign up</string>
    <string name="log_out">Logout</string>
    <string name="sync">Sync data</string>
    <string name="sent">Data has been sent</string>
</resources>